--- a/config
+++ b/config
@@ -1,3 +1,3 @@
-export PL="{{lang}}"
-export BOTKEY="{{botkey}}"
-export BOTNAME="{{botname}}"
+export PL="mono"
+export BOTKEY="JlOimC1hL7Z0Bg"
+export BOTNAME="eLemmings"
